# tftest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alexnet_graph.json  alexnet_res.txt  alexnet_runtime.json  alexnet_timeline.json  graph_placer_test.py  lenet5_graph.json  lenet5_runtime.json  lenet5_timeline.json  log  match.py  matmul.py  matmul_graph.json  matmul_res.txt  matmul_timeline.json  mnist.py  mnist_graph.json  mnist_timeline.json  mnist_tot  placer_test_after.txt  placer_test_before.txt  report.txt  res.txt  simple.py  simple_graph.json  simple_graph_def  simple_timeline.json  tfrun
demo_model/: demo.index
scripts/: config.py  convcpu.py  format.py  format_graph.py  format_matmulcpu.py  matmulcpu.py  models.py  predict.py
src/: a.py  b.cpp  main.cc  main.cpp
src/pyscript/: alexnet.py  alexnet_report.json  alexnet_report.py  genGraphDef.py  graph.txt  graph_placer_test.py  lenet5.py  lenet5_graph.json  lenet5_report.json  lenet5_report.py  lenet5_timeline.json  match.py  matmul.py  matmul1.py  mnist.py  placer_test_before.txt  puretest.py  test_timeline.json
